using highchart-ng

--- a/Addins.NAV.Solution/WebClient.Charts.BarChart/Index.html
+++ b/Addins.NAV.Solution/WebClient.Charts.BarChart/Index.html
@@ -3,32 +3,36 @@
 <head>
     <title>HighCharts Practice</title>
 
-    <script src="Lib/shareLib/jquery-2.1.4.min.js"></script>
-    <script src="Lib/shareLib/angular.min.js"></script>
-    <script src="Lib/shareLib/bootstrap.min.js"></script>
-    <script src="Lib/shareLib/ui-bootstrap.min.js"></script>
-    <script src="Lib/shareLib/ui-bootstrap-tpls.min.js"></script>
+
+    <script src="Build/Script/jquery-2.1.4.min.js"></script>
+    <script src="Build/Script/angular.min.js"></script>
+    <script src="Build/Script/bootstrap.min.js"></script>
+    <script src="Build/Script/ui-bootstrap.min.js"></script>
+    <script src="Build/Script/ui-bootstrap-tpls.min.js"></script>
+
 
     <!-- high charts  libraries-->
-    <script src="Lib/shareLib/exportClientSideLib/highcharts.js"></script>
+    <script src="Build/Script/highcharts.js"></script>
 
     <!-- handle override client side exporting -->
-    <script src="Lib/shareLib/exportClientSideLib/exporting.js"></script>
-    <script src="Lib/shareLib/exportClientSideLib/canvas-tools.js"></script>
-    <script src="Lib/shareLib/exportClientSideLib/export-csv.js"></script>
-    <script src="Lib/shareLib/exportClientSideLib/jspdf.js"></script>
-    <script src="Lib/shareLib/exportClientSideLib/highcharts-export-clientside.js"></script>
-
-    <script src="Lib/customLib/MyApp.js"></script>
-    <script src="Lib/customLib/mainController.js"></script>
+    <script src="Build/Script/exporting.js"></script>
+    <script src="Build/Script/canvas-tools.js"></script>
+    <script src="Build/Script/export-csv.js"></script>
+    <script src="Build/Script/jspdf.js"></script>
+    <script src="Build/Script/highcharts-export-clientside.js"></script>
+    <script src="Build/Script/highcharts-ng.min.js"></script>
+    <script src="Build/Script/MyApp.js"></script>
+    <script src="Build/Script/mainController.js"></script>
 
     <link href="Content/bootstrap.min.css" rel="stylesheet" />
 </head>
 <body>
     <div class="container-fluid">
-        <div id="LSx4yChart" ng-controller="lsx4yChartController" ng-init="initLSxChart();"></div>
-        <div id="XFourChart" ng-controller="xfourChartController" ng-init="initXFourChart();"></div>
-        <div id="allPlatformsYTDChart" ng-controller="allPlatformsYTDController" ng-init="initAllPlatformsYTDChart();"></div>
+        <div ng-controller="chartsController">
+            <highchart config="initLSxChartConfig"></highchart>
+            <highchart config="initXFourChartConfig"></highchart>
+            <highchart config="initAllPlatformsYTDChartConfig"></highchart>
+        </div>
     </div>
 </body>
 </html>
